fix(style): Adjust z-index to make Vanta background visible

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -4,8 +4,10 @@
 
 .page__footer {
   @include clearfix;
-  background-color: var(--global-footer-bg-color);
+  background: transparent;
   color: var(--global-text-color-light);
+  position: relative;
+  z-index: 1;
 
   float: left;
   margin-left: 0;
